--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,7 +1,9 @@
 body {
-   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0px;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
@@ -60,6 +62,7 @@ body {
 
 .sobreProjeto {
     display: flex;
+    flex: 1;
     align-items: center;
     background-color: #304d63;
     height: 1000px;
@@ -69,6 +72,8 @@ body {
 .sobreProjeto .container {
     display: flex;
     flex-direction: column;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 .sobreProjeto h1 {
@@ -112,6 +117,7 @@ body {
 
 .jogosClicker {
     display: flex;
+    flex: 1;
     background-color: #323232;
     height: 2600px;
     align-items: center;
@@ -120,6 +126,8 @@ body {
 
 .jogosClicker .container {
     flex-direction: column;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 .jogosClicker h1 {
@@ -332,18 +340,19 @@ body {
     transition: 0.2s;
 }
 
-.testeClick #clicksDisplay, .testeClick #cpsDisplay {
-width: 100%;
-text-align: center;
-font-size: 30px;
-background-color: #f2d096;
-border-radius: 20px;
-padding-top: 1%;
-padding-bottom: 1%;
-border: #b2e7e8 solid 2px;
-color: #304d63;
-margin-top: 2%;
--webkit-text-stroke: #ed8975 0.3px;
+.testeClick #clicksDisplay,
+.testeClick #cpsDisplay {
+    width: 100%;
+    text-align: center;
+    font-size: 30px;
+    background-color: #f2d096;
+    border-radius: 20px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: #b2e7e8 solid 2px;
+    color: #304d63;
+    margin-top: 2%;
+    -webkit-text-stroke: #ed8975 0.3px;
 }
 
 .testeClick #timer {
@@ -361,6 +370,257 @@ margin-top: 2%;
 
 /* Fim do "Teste de Click" */
 
+/* Início do "Pesquisa" */
+
+.pesquisa {
+    background-color: #323232;
+    flex: 1;
+    height: 200px;
+    border-bottom: #ed8975 solid 2px;
+}
+
+.pesquisa .container {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
+.pesquisa h1 {
+    color: #b2e7e8;
+    font-size: 62px;
+    border-left: #b2e7e8 solid 8px;
+    padding-left: 3%;
+    border-radius: 8px;
+    font-style: italic;
+}
+
+.pesquisa h1:hover {
+    transform: translateY(-4px);
+    color: #ed8975;
+    border-radius: 0px;
+    border-left: #ed8975 solid 8px;
+    transition: 0.3s;
+}
+
+.pesquisa h1:not(:hover) {
+    transform: translateY(4px);
+    color: #b2e7e8;
+    border-radius: 8px;
+    border-left: #b2e7e8 solid 8px;
+    transition: 0.3s;
+}
+
+.pesquisa p {
+    color: #f2d096;
+    font-size: 35px;
+    text-align: justify;
+}
+
+.pesquisa p b {
+    color: #ed8975;
+}
+
+.pesquisa h2 {
+    color: #b2e7e8;
+    font-size: 48px;
+    padding-left: 3%;
+    margin-bottom: 10%;
+    font-style: italic;
+}
+
+.pesquisa h2:hover {
+    transform: translateY(-4px);
+    color: #ed8975;
+    transition: 0.3s;
+}
+
+.pesquisa h2:not(:hover) {
+    color: #b2e7e8;
+    transition: 0.3s;
+}
+
+.pesquisa .perguntas {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3%;
+}
+
+.pesquisa button {
+    border: none;
+    background-color: #323232;
+    color: #ed8975;
+    border-left: #b2e7e8 solid 5px;
+    border-right: #b2e7e8 solid 5px;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.pesquisa #pergunta1 button {
+    font-size: 50px;
+}
+
+.pesquisa #pergunta2 button {
+    font-size: 35px;
+}
+
+.pesquisa #pergunta3 button {
+    font-size: 33px;
+}
+
+.pesquisa #pergunta4 button {
+    font-size: 32px;
+}
+
+.pesquisa #pergunta5 {
+    width: 60%;
+}
+
+.pesquisa #pergunta5 button {
+    font-size: 22px;
+}
+
+.pesquisa button:hover {
+    cursor: pointer;
+    transform: scale(1.15);
+    color: #f2d096;
+    transition: 0.3s;
+    text-decoration: underline;
+    border-left: #f2d096 solid 5px;
+    border-right: #f2d096 solid 5px;
+    border-radius: 0px;
+}
+
+.pesquisa button:not(:hover) {
+    color: #ed8975;
+    transition: 0.3s;
+}
+
+.pesquisa .btns {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10%;
+}
+
+.pesquisa .line {
+    color: #8fb9aa;
+    font-size: 35px;
+    display: flex;
+    justify-content: center;
+    margin-top: 1%;
+}
+
+.pesquisa .perguntasBlock {
+    border-left: #b2e7e8 solid 8px;
+    border-right: #b2e7e8 solid 8px;
+    border-radius: 8px;
+}
+
+.perguntas .perguntasBlock:hover {
+    border-left: #ed8975 solid 8px;
+    border-right: #ed8975 solid 8px;
+    border-radius: 0px;
+    transition: 0.3s;
+}
+
+.pesquisa .perguntasBlock:not(:hover) {
+    border-left: #b2e7e8 solid 8px;
+    border-right: #b2e7e8 solid 8px;
+    border-radius: 8px;
+    transition: 0.3s;
+}
+
+/* Fim do "Pesquisa" */
+
+/* Início do "Meu Jogo Clicker" */
+
+.meuJogo {
+    background-color: #304d63;
+    height: 1000px;
+    flex: 1;
+    border-bottom: #ed8975 solid 2px;
+}
+
+.meuJogo .container {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
+.meuJogo h1 {
+    color: #b2e7e8;
+    font-size: 62px;
+    border-left: #b2e7e8 solid 8px;
+    padding-left: 3%;
+    border-radius: 8px;
+    font-style: italic;
+}
+
+.meuJogo h1:hover {
+    transform: translateY(-4px);
+    color: #ed8975;
+    border-radius: 0px;
+    border-left: #ed8975 solid 8px;
+    transition: 0.3s;
+}
+
+.meuJogo h1:not(:hover) {
+    transform: translateY(4px);
+    color: #b2e7e8;
+    border-radius: 8px;
+    border-left: #b2e7e8 solid 8px;
+    transition: 0.3s;
+}
+
+.meuJogo p {
+    color: #f2d096;
+    font-size: 35px;
+    text-align: justify;
+}
+
+.meuJogo p b {
+    color: #ed8975;
+}
+
+.meuJogo a {
+    font-size: 35px;
+    text-decoration: none;
+    color: #b2e7e8;
+    font-weight: bolder;
+    border-bottom: #b2e7e8 solid 8px;
+    border-radius: 8px;
+    padding-bottom: 0.2%;
+    text-align: center;
+}
+
+.meuJogo a:hover {
+    color: #ed8975;
+    border-bottom: #ed8975 solid 8px;
+    border-radius: 0px;
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+.meuJogo a:not(:hover) {
+    color: #b2e7e8;
+    border-bottom: #b2e7e8 solid 8px;
+    border-radius: 8px;
+    transform: scale(1);
+    transition: 0.3s;
+}
+
+.meuJogo #dinheirosClicker {
+    display: flex;
+    justify-content: center;
+}
+
+/* Fim do "Meu Jogo Clicker" */
+
 /* Início do Footer */
 
 .footer {
@@ -375,6 +635,10 @@ margin-top: 2%;
 .footer .container {
     flex-direction: column;
     align-items: center;
+}
+
+.footer p {
+    text-align: center;
 }
 
 .footer p b {
@@ -397,4 +661,3 @@ margin-top: 2%;
 }
 
 /* Fim do Footer */
-
