--- a/we-data-viz2/site/public/css/style.css
+++ b/we-data-viz2/site/public/css/style.css
@@ -62,10 +62,11 @@ body {
 
 .sobreProjeto {
     display: flex;
+    flex-wrap: wrap;
     flex: 1;
     align-items: center;
     background-color: #304d63;
-    height: 1000%;
+    height: 1000px;
     border-bottom: #ed8975 solid 2px;
 }
 
@@ -119,7 +120,7 @@ body {
     display: flex;
     flex: 1;
     background-color: #323232;
-    height: 2600%;
+    height: 2600px;
     align-items: center;
     border-bottom: #ed8975 solid 2px;
 }
@@ -539,7 +540,7 @@ body {
 
 .meuJogo {
     background-color: #323232;
-    height: 1000%;
+    height: 1000px;
     flex: 1;
     border-bottom: #ed8975 solid 2px;
 }
@@ -548,8 +549,8 @@ body {
     height: 100%;
     flex-direction: column;
     justify-content: center;
-    margin-top: 30px;
-    margin-bottom: 230px;
+    margin-top: 170px;
+    margin-bottom: 170px;
 }
 
 .meuJogo h1 {
@@ -626,6 +627,7 @@ body {
 .footer {
     display: flex;
     justify-content: flex-end;
+    flex: 1;
     background-color: #304d63;
     color: #f2d096;
     height: 250px;
@@ -635,6 +637,7 @@ body {
 .footer .container {
     flex-direction: column;
     align-items: center;
+    margin-top: 3%;
 }
 
 .footer p {
@@ -661,3 +664,193 @@ body {
 }
 
 /* Fim do Footer */
+
+/* Início do LogIn */
+
+.login {
+    display: flex;
+    border-bottom: #ed8975 solid 3px;
+    height: 1000px;
+    flex: 1;
+    background-color: #323232;
+}
+
+.login .container {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
+.login .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #304d63;
+    border: #ed8975 solid 2px;
+    border-radius: 20px;
+    height: 550px;
+    width: 500px;
+    box-shadow: #8fb9aa 7px 7px;
+}
+
+.login a {
+    text-decoration: none;
+    color: #ed8975;
+    margin-top: 3%;
+    font-size: 20px;
+}
+
+.login a:hover {
+    text-decoration: underline;
+    color: #b2e7e8;
+    transition: 0.3s;
+}
+
+.login a:not(:hover) {
+    text-decoration: none;
+    color: #ed8975;
+    transition: 0.3s;
+}
+
+.login h1 {
+    color: #ed8975;
+    font-size: 50px;
+    text-decoration: underline;
+    margin-bottom: 13%;
+    margin-top: 0%;
+}
+
+.login p {
+    font-size: 25px;
+    color: #b2e7e8;
+    margin-bottom: 0.5%;
+}
+
+.login input {
+    border-radius: 10px;
+    font-size: 20px;
+    width: 75%;
+    height: 7%;
+    text-align: center;
+    border: #ed8975 solid 2px;
+}
+
+.login button {
+    color: #ed8975;
+    background-color: #b2e7e8;
+    border-radius: 10px;
+    margin-top: 12%;
+    border: #ed8975 solid 2px;
+    font-size: 35px;
+}
+
+.login button:hover {
+    cursor: pointer;
+    background-color: #f2d096;
+    transition: 0.3s;
+}
+
+.login button:not(:hover) {
+    background-color: #b2e7e8;
+    transition: 0.3s;
+}
+
+/* Fim do LogIn */
+
+/* Início do Registro */
+
+.registro {
+    display: flex;
+    border-bottom: #ed8975 solid 3px;
+    height: 1000px;
+    flex: 1;
+    background-color: #323232;
+}
+
+.registro .container {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
+.registro .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #304d63;
+    border: #ed8975 solid 2px;
+    border-radius: 20px;
+    height: 680px;
+    width: 500px;
+    box-shadow: #8fb9aa 7px 7px;
+}
+
+.registro a {
+    text-decoration: none;
+    color: #ed8975;
+    margin-top: 3%;
+    font-size: 20px;
+}
+
+.registro a:hover {
+    text-decoration: underline;
+    color: #b2e7e8;
+    transition: 0.3s;
+}
+
+.registro a:not(:hover) {
+    text-decoration: none;
+    color: #ed8975;
+    transition: 0.3s;
+}
+
+.registro h1 {
+    color: #ed8975;
+    font-size: 50px;
+    text-decoration: underline;
+    margin-bottom: 13%;
+    margin-top: 0%;
+}
+
+.registro p {
+    font-size: 25px;
+    color: #b2e7e8;
+    margin-bottom: 0.5%;
+}
+
+.registro input {
+    border-radius: 10px;
+    font-size: 20px;
+    width: 75%;
+    height: 7%;
+    text-align: center;
+    border: #ed8975 solid 2px;
+}
+
+.registro button {
+    color: #ed8975;
+    background-color: #b2e7e8;
+    border-radius: 10px;
+    margin-top: 12%;
+    border: #ed8975 solid 2px;
+    font-size: 35px;
+}
+
+.registro button:hover {
+    cursor: pointer;
+    background-color: #f2d096;
+    transition: 0.3s;
+}
+
+.registro button:not(:hover) {
+    background-color: #b2e7e8;
+    transition: 0.3s;
+}
+
+/* Fim do Registro */
