--- a/webDataViz/site/public/dinheirosClicker/style.css
+++ b/webDataViz/site/public/dinheirosClicker/style.css
@@ -21,6 +21,10 @@ body {
     box-shadow: 0px 3px gray;
 }
 
+#salvar {
+    margin-top: 30%;
+}
+
 .mainBody {
     display: flex;
     justify-content: space-between;
