--- a/webDataViz/site/public/css/style.css
+++ b/webDataViz/site/public/css/style.css
@@ -65,7 +65,7 @@ body {
     flex-wrap: wrap;
     flex: 1;
     align-items: center;
-    background-color: #304d63;
+    background-image: url("../images/backGround.jpg");
     height: 1000px;
     border-bottom: #ed8975 solid 2px;
 }
@@ -106,6 +106,12 @@ body {
     color: #f2d096;
     font-size: 35px;
     text-align: justify;
+}
+
+.sobreProjeto img {
+    width: 100%;
+    border: #ed8975 solid 2px;
+    border-radius: 20px;
 }
 
 .sobreProjeto p b {
@@ -225,12 +231,18 @@ body {
     margin-top: 1%;
 }
 
+.jogosClicker img {
+    width: 100%;
+    border: #ed8975 solid 2px;
+    border-radius: 20px;
+}
+
 /* Fim do "Jogos Clicker / Idle" */
 
 /* Início do "Teste de Click" */
 
 .testeClick {
-    background-color: #304d63;
+    background-image: url("../images/background.jpg");
     height: 1450px;
     border-bottom: #ed8975 solid 2px;
 }
@@ -371,171 +383,6 @@ body {
 
 /* Fim do "Teste de Click" */
 
-/* Início do "Pesquisa" */
-
-.pesquisa {
-    background-color: #323232;
-    flex: 1;
-    height: 200px;
-    border-bottom: #ed8975 solid 2px;
-}
-
-.pesquisa .container {
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 200px;
-    margin-bottom: 200px;
-}
-
-.pesquisa h1 {
-    color: #b2e7e8;
-    font-size: 62px;
-    border-left: #b2e7e8 solid 8px;
-    padding-left: 3%;
-    border-radius: 8px;
-    font-style: italic;
-}
-
-.pesquisa h1:hover {
-    transform: translateY(-4px);
-    color: #ed8975;
-    border-radius: 0px;
-    border-left: #ed8975 solid 8px;
-    transition: 0.3s;
-}
-
-.pesquisa h1:not(:hover) {
-    transform: translateY(4px);
-    color: #b2e7e8;
-    border-radius: 8px;
-    border-left: #b2e7e8 solid 8px;
-    transition: 0.3s;
-}
-
-.pesquisa p {
-    color: #f2d096;
-    font-size: 35px;
-    text-align: justify;
-}
-
-.pesquisa p b {
-    color: #ed8975;
-}
-
-.pesquisa h2 {
-    color: #b2e7e8;
-    font-size: 48px;
-    padding-left: 3%;
-    margin-bottom: 10%;
-    font-style: italic;
-}
-
-.pesquisa h2:hover {
-    transform: translateY(-4px);
-    color: #ed8975;
-    transition: 0.3s;
-}
-
-.pesquisa h2:not(:hover) {
-    color: #b2e7e8;
-    transition: 0.3s;
-}
-
-.pesquisa .perguntas {
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 3%;
-}
-
-.pesquisa button {
-    border: none;
-    background-color: #323232;
-    color: #ed8975;
-    border-left: #b2e7e8 solid 5px;
-    border-right: #b2e7e8 solid 5px;
-    border-radius: 3px;
-    font-weight: bold;
-}
-
-.pesquisa #pergunta1 button {
-    font-size: 50px;
-}
-
-.pesquisa #pergunta2 button {
-    font-size: 35px;
-}
-
-.pesquisa #pergunta3 button {
-    font-size: 33px;
-}
-
-.pesquisa #pergunta4 button {
-    font-size: 32px;
-}
-
-.pesquisa #pergunta5 {
-    width: 60%;
-}
-
-.pesquisa #pergunta5 button {
-    font-size: 22px;
-}
-
-.pesquisa button:hover {
-    cursor: pointer;
-    transform: scale(1.15);
-    color: #f2d096;
-    transition: 0.3s;
-    text-decoration: underline;
-    border-left: #f2d096 solid 5px;
-    border-right: #f2d096 solid 5px;
-    border-radius: 0px;
-}
-
-.pesquisa button:not(:hover) {
-    color: #ed8975;
-    transition: 0.3s;
-}
-
-.pesquisa .btns {
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 10%;
-}
-
-.pesquisa .line {
-    color: #8fb9aa;
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    margin-top: 1%;
-}
-
-.pesquisa .perguntasBlock {
-    border-left: #b2e7e8 solid 8px;
-    border-right: #b2e7e8 solid 8px;
-    border-radius: 8px;
-}
-
-.perguntas .perguntasBlock:hover {
-    border-left: #ed8975 solid 8px;
-    border-right: #ed8975 solid 8px;
-    border-radius: 0px;
-    transition: 0.3s;
-}
-
-.pesquisa .perguntasBlock:not(:hover) {
-    border-left: #b2e7e8 solid 8px;
-    border-right: #b2e7e8 solid 8px;
-    border-radius: 8px;
-    transition: 0.3s;
-}
-
-/* Fim do "Pesquisa" */
-
 /* Início do "Meu Jogo Clicker" */
 
 .meuJogo {
@@ -576,6 +423,12 @@ body {
     border-radius: 8px;
     border-left: #b2e7e8 solid 8px;
     transition: 0.3s;
+}
+
+.meuJogo img {
+    width: 100%;
+    border: #ed8975 solid 2px;
+    border-radius: 20px;
 }
 
 .meuJogo p {
@@ -880,6 +733,7 @@ body {
     padding-left: 3%;
     border-radius: 8px;
     font-style: italic;
+    text-align: center;
 }
 
 .rank h1:hover {
